--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^2.2.4",
     "normalize-scss": "^6.0.0",
     "reflex-grid": "^1.5.0",
+    "run-sequence": "^1.2.2",
     "sass-mediaqueries": "^1.6.1"
   }
 }
