--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "homepage": "https://bitbucket.org/chemaxa/zenit#readme",
   "devDependencies": {
     "browser-sync": "^2.18.8",
+    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
