--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "normalize-scss": "^6.0.0",
     "reflex-grid": "^1.5.0",
     "run-sequence": "^1.2.2",
-    "sass-mediaqueries": "^1.6.1"
+    "sass-mediaqueries": "^1.6.1",
+    "yargs": "^7.1.0"
   }
 }
