--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-sourcemaps": "^2.4.1",
     "jquery": "^2.2.4",
     "normalize-scss": "^6.0.0",
+    "range-slider-sass": "^2.0.0",
     "reflex-grid": "^1.5.0",
     "run-sequence": "^1.2.2",
     "sass-mediaqueries": "^1.6.1",
